--- a/Smart-Home/Automated-Features.html
+++ b/Smart-Home/Automated-Features.html
@@ -4,6 +4,51 @@
         <title>Automated Features</title>
     </head>
     <body>
+        <h2>Automated Technology</h2>
+
+        <ul>
+            <li>Brain</li>
+            <li>Memory Tapes</li>
+            <li>Self-protection</li>
+            <ol>
+                <li>Password</li>
+                <li>Sound Recognition</li>
+                <li>Automatic Shudders</li>
+                <li>Elevated Windows, Doors, and Shades</li>
+            </ol>
+        </ul>
         
+        <h2>Automated Convenience</h2>
+
+        <ul>
+            <li>Voice Clock</li>
+            <ol>
+                <li>Voice: schedule, reminders, etc.</li>
+            </ol>
+            <li>Breakfast Stove</li>
+            <li>Weather Box</li>
+            <li>Garage Doors</li>
+            <li>Patio tables: Cards, Drinks, Food, Music</li>
+            <li>Bed Warmers</li>
+            <li>Baths</li>
+            <li>Garden Sprinklers</li>
+        </ul>
+
+        <h2>Automated Cleaning</h2>
+        <ul>
+            <li>Aluminum Wedge and Dishwasher</li>
+            <li>Robot mice</li>
+            <li>Incinerator</li>
+            <li>Copper Scrap Rats</li>
+        </ul>
+
+        <h2>Safety Features</h2>
+        <ul>
+            <li>Fire Alarms</li>
+            <li>Water: Ceiling Walls</li>
+            <li>Water Rats</li>
+            <li>Robots</li>
+            <li>20 Robotic Snakes</li>
+        </ul>
     </body>
 </html>
