--- a/Smart-Home/Automated-Features.html
+++ b/Smart-Home/Automated-Features.html
@@ -13,6 +13,7 @@
             <ol>
                 <li>Password</li>
                 <li>Sound Recognition</li>
+                <img src="Smart House Images/Auto shudders.png">
                 <li>Automatic Shudders</li>
                 <li>Elevated Windows, Doors, and Shades</li>
             </ol>
@@ -41,14 +42,11 @@
             <li>Incinerator</li>
             <li>Copper Scrap Rats</li>
         </ul>
-
-        <h2>Safety Features</h2>
-        <ul>
-            <li>Fire Alarms</li>
-            <li>Water: Ceiling Walls</li>
-            <li>Water Rats</li>
-            <li>Robots</li>
-            <li>20 Robotic Snakes</li>
-        </ul>
+        <h2>Learn More About The New Smart House</h2>
+        <footer><p>
+            <br><a href=../Smart-Home/Inside.html>Inside</a></br>
+            <br><a href=../Smart-Home/Safety.html>Safety</a></br>
+            <br><a href=../Smart-Home/Home-page.html>Homepage</a></br></p></footer>
+           
     </body>
 </html>
