--- a/Smart-Home/Home-page.html
+++ b/Smart-Home/Home-page.html
@@ -1,20 +1,41 @@
 <!DOCTYPE html>
 <html lang='en'>
-    <head>
-        <title>Smart Home</title>
-    </head>
-    <body>
-        <h2>Your New Smart House Awaits</h2>
-        <img src="Smart-Home.png">
-        <p>This elevated new smart home is the right fit for you and your family. 
-        This smart house include automated technology, automated convenience, automated cleaning, and many safety features.
-        It also includes a one of a kind study room and nursery. The smart house is designed for all your familes needs and wants.
-        It has enough space for your everyday activites and for safety technology.</p>
-        <p>
-        <div><a href=../Smart-Home/Inside.html>Inside</a></div>
-            <div><a href=../Smart-Home/Automated-Features.html>Automated Features</a></div>
-        <div><a href=../Smart-Home/Amenities.html>Amenities</a></div></p>
 
-        
-    </body>
+<head>
+    <title>Smart Home</title>
+</head>
+
+<body>
+    <h2>Your New Smart House Awaits</h2>
+    <img src="Images/SmartHouse.PNG">
+    <p>
+        Welcome to the future of living with our advanced Smart House, where cutting-edge technology and top-tier
+        security redefine modern comfort.
+        This exceptional home features <strong>4 spacious bedrooms, 2 full bathrooms, and a stylish
+            half-bathroom</strong>, all seamlessly managed by the innovative "Brain of the House" system.
+        Experience unparalleled convenience with a climate control system that adapts to your preferences, while voice
+        controls let you effortlessly manage lighting, appliances, and entertainment.
+        The high-speed Wi-Fi throughout the house ensures smooth connectivity for all your digital needs.
+        Your safety is paramount with the integrated security system, which includes many automated features all
+        centrally controlled by the Brain of the House.
+        This system also manages a smart doorbell for easy visitor and delivery management and provides automated
+        emergency alerts for smoke, fire, and carbon monoxide, ensuring rapid responses and peace of mind.
+        The exterior’s motion-activated lighting further enhances security, automatically illuminating your surroundings
+        when needed.
+        Step into a home where every feature is intelligently managed to offer you unparalleled comfort, convenience,
+        and security.
+        Discover how our Smart House, powered by the Brain of the House, can elevate your living experience and bring
+        the future to your doorstep.</p>
+    <h2>Learn More About The New Smart House</h2>
+    <footer>
+        <p>
+            <br><a href=../Smart-Home/Inside.html>Inside</a></br>
+            <br><a href=../Smart-Home/Automated-Features.html>Automated Features</a></br>
+            <br><a href=../Smart-Home/Safety.html>Safety</a></br>
+        </p>
+    </footer>
+
+
+</body>
+
 </html>
