--- a/Smart-Home/Inside.html
+++ b/Smart-Home/Inside.html
@@ -4,6 +4,10 @@
         <title>Inside</title>
     </head>
     <body>
-        
+        <h2>Learn More About The New Smart House</h2>
+        <p>
+            <br><a href=../Smart-Home/Automated-Features.html>Automated Features</a></br>
+            <br><a href=../Smart-Home/Safety.html>Safety</a></br>
+            <br><a href=../Smart-Home/Home-page.html>Homepage</a></br></p>
     </body>
 </html>
