--- a/Smart-Home/Automated-Features.html
+++ b/Smart-Home/Automated-Features.html
@@ -13,7 +13,7 @@
             <ol>
                 <li>Password</li>
                 <li>Sound Recognition</li>
-                <img src="Smart House Images/Auto shudders.png">
+                <img src="Smart-House-Images/Auto shudders.png" width="500" height="350">
                 <li>Automatic Shudders</li>
                 <li>Elevated Windows, Doors, and Shades</li>
             </ol>
