--- a/Smart-Home/Home-page.html
+++ b/Smart-Home/Home-page.html
@@ -7,7 +7,7 @@
 
 <body>
     <h2>Your New Smart House Awaits</h2>
-    <img src="Images/SmartHouse.PNG">
+    <img src="Smart-House-Images/SmartHouse.PNG">
     <p>
         Welcome to the future of living with our advanced Smart House, where cutting-edge technology and top-tier
         security redefine modern comfort.
