--- a/Smart-Home/Automated-Features.html
+++ b/Smart-Home/Automated-Features.html
@@ -7,39 +7,62 @@
         <h2>Automated Technology</h2>
 
         <ul>
-            <li>Brain</li>
-            <li>Memory Tapes</li>
+            <h2>Brain</h2>
+            <img src="Smart-House-Images/Brain of Smart House.png" width="500" height="350">  
+            <p>Elevate your home with the IntelliBrain™, the ultimate smart home hub that controls and integrates all your home technology.
+            It features advanced AI for adaptive learning, centralized management of lighting, climate, and appliances, and enhanced security with real-time monitoring and emergency protocols. 
+            Enjoy seamless control via voice commands or a mobile app, energy-efficient operations, and robust privacy protections. 
+            With IntelliBrain™, experience the future of home automation and safety today.</p>   
+            <img src="Smart-House-Images/Memory Tapes.png" width="500" height="350">  
+            <h2>Memory Tapes</h2>
+            Elevate your home with MemoTape™, a revolutionary system that uses advanced memory tapes to control and monitor all your home technology. 
+            With personalized automation, centralized management, and seamless integration, MemoTape™ enhances comfort and efficiency.
+            Enjoy enhanced security with real-time monitoring, emergency protocols, and robust privacy protections. Control everything through a user-friendly app or voice commands, and benefit from energy-efficient operations. 
+            Experience the future of smart living with MemoTape™.
+            
             <li>Self-protection</li>
             <ol>
+                <img src="Smart-House-Images/Password Safety.png" width="500" height="350">
                 <li>Password</li>
                 <li>Sound Recognition</li>
                 <img src="Smart-House-Images/Auto shudders.png" width="500" height="350">
                 <li>Automatic Shudders</li>
-                <li>Elevated Windows, Doors, and Shades</li>
             </ol>
         </ul>
         
         <h2>Automated Convenience</h2>
 
         <ul>
+            <img src="Smart-House-Images/Clock.png" width="500" height="350">
             <li>Voice Clock</li>
             <ol>
                 <li>Voice: schedule, reminders, etc.</li>
             </ol>
+            <img src="Smart-House-Images/Breakfast Stove.png" width="500" height="350">
             <li>Breakfast Stove</li>
+            <img src="Smart-House-Images/Weather box.png" width="500" height="350">
             <li>Weather Box</li>
+            <img src="Smart-House-Images/Automated Garage Doors.png" width="500" height="350">
             <li>Garage Doors</li>
+            <img src="Smart-House-Images/Patio Table.png" width="500" height="350">
             <li>Patio tables: Cards, Drinks, Food, Music</li>
+            <img src="Smart-House-Images/Bed Warmers.png" width="500" height="350">
             <li>Bed Warmers</li>
+            <img src="Smart-House-Images/Bathtub.png" width="500" height="350">
             <li>Baths</li>
+            <img src="Smart-House-Images/Garden Sprinklers.png" width="500" height="350">
             <li>Garden Sprinklers</li>
         </ul>
 
         <h2>Automated Cleaning</h2>
         <ul>
+            <img src="Smart-House-Images/Dishwasher.png" width="500" height="350">
             <li>Aluminum Wedge and Dishwasher</li>
+            <img src="Smart-House-Images/Cleaning Mouse.png" width="500" height="350">
             <li>Robot mice</li>
+            <img src="Smart-House-Images/Incinerator.png" width="500" height="350">
             <li>Incinerator</li>
+            <img src="Smart-House-Images/copper scrap rat.png" width="500" height="350">
             <li>Copper Scrap Rats</li>
         </ul>
         <h2>Learn More About The New Smart House</h2>
