--- a/Smart-Home/Inside.html
+++ b/Smart-Home/Inside.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang='en'>
     <head>
-        <title>Inside</title>
+        <title>Special Rooms Feature In Your New Smart House</title>
     </head>
     <body>
-        <h2>Learn More About The New Smart House</h2>
+    
+        <h2>Study</h2>
+        <img src="Smart-House-Images/Study.png" width="500" height="350">
+
+        <h2>Nursey</h2>
+        <img src="Smart-House-Images/Nursery.png" width="500" height="350">
         <p>
             <br><a href=../Smart-Home/Automated-Features.html>Automated Features</a></br>
             <br><a href=../Smart-Home/Safety.html>Safety</a></br>
