--- a/Smart-Home/Safety.html
+++ b/Smart-Home/Safety.html
@@ -7,10 +7,13 @@
 
         <h2>Safety Features</h2>
         <ul>
-            <li>Fire Alarms</li>
-            <li>Water: Ceiling Walls</li>
+            <img src="Smart-House-Images/Fire Alarm.png" width="500" height="350">
+            <li>Fire Alarms With Sprinklers</li>
+            <img src="Smart-House-Images/Water Rat.png" width="500" height="350">
             <li>Water Rats</li>
+            <img src="Smart-House-Images/Robot.png" width="500" height="350">
             <li>Robots</li>
+            <img src="Smart-House-Images/Robot Snake.png" width="500" height="350">
             <li>20 Robotic Snakes</li>
         </ul>
         <h2>Learn More About The New Smart House</h2>
