--- a/Smart-Home/Home-page.html
+++ b/Smart-Home/Home-page.html
@@ -3,11 +3,12 @@
 
 <head>
     <title>Smart Home</title>
+    <link href="app.css" rel="stylesheet">
 </head>
 
 <body>
+    <img src="Smart-House-Images/warm-smart.png" width="1440px" height="737px">
     <h2>Your New Smart House Awaits</h2>
-    <img src="Smart-House-Images/SmartHouse.PNG">
     <p>
         Welcome to the future of living with our advanced Smart House, where cutting-edge technology and top-tier
         security redefine modern comfort.
@@ -26,14 +27,31 @@
         and security.
         Discover how our Smart House, powered by the Brain of the House, can elevate your living experience and bring
         the future to your doorstep.</p>
-    <h2>Learn More About The New Smart House</h2>
-    <footer>
+    <img src="Smart-House-Images/warm-safety.png" width="603px" height="423px">
+    <h2>Secure Your Peace of Mind!</h2>
+    <p> Our home features advanced safety systems, including smart locks, security cameras, and smoke detectors. 
+        Enjoy child and pet safety measures, plus emergency preparedness tools. Relax knowing your home is a secure sanctuary. 
+        Schedule a visit today to experience the peace of mind our safety features offer!</p>
+
+    <img src="Smart-House-Images/Interior.png" width="603px" height="423px">
+    <h2>Explore Your Dream Home!</h2>
+    <p> Step inside to find a bright, spacious layout with modern finishes and high-end appliances. 
+        Enjoy cozy bedrooms, luxurious bathrooms, and flexible spaces that fit your lifestyle.
+        Built for efficiency, this home enhances daily living. Schedule your tour today and envision your future here!</p>
+
+    <img src="Smart-House-Images/warm-automated-features.png" width="603px" height="423px">
+    <h2>Experience the Future of Living!</h2>
+
+    <p> Our automated home offers unmatched convenience with smart controls for lights, security, and appliances. 
+        Enjoy enhanced safety with smart locks and cameras, plus energy savings with automated thermostats. 
+        Seamlessly integrate your devices for a harmonious lifestyle. Do not miss the chance to elevate your everyday living—schedule a visit today!</p>
+
         <p>
             <br><a href=../Smart-Home/Inside.html>Inside</a></br>
             <br><a href=../Smart-Home/Automated-Features.html>Automated Features</a></br>
             <br><a href=../Smart-Home/Safety.html>Safety</a></br>
         </p>
-    </footer>
+    <footer>© 2024 Dream Homes Realty | All Rights Reserved 1234 Realty Lane, Suite 100 | Hometown, ST 12345 Phone: (123) 456-7890 | Email: info@smarthomes.com</footer>
 
 
 </body>
