--- a/Smart-Home/Inside.html
+++ b/Smart-Home/Inside.html
@@ -2,17 +2,35 @@
 <html lang='en'>
     <head>
         <title>Special Rooms Feature In Your New Smart House</title>
+        <link href="app.css" rel="stylesheet">
     </head>
     <body>
     
-        <h2>Study</h2>
-        <img src="Smart-House-Images/Study.png" width="500" height="350">
+        
+        <img src="Smart-House-Images/Study.png" width="1296px" height="785px">
+        <img src="Smart-House-Images/Nursery.png" width="1296px" height="785px">
+        <img src="Smart-House-Images/Bathroom 1.png" width="1296px" height="785px">
+        <img src="Smart-House-Images/Bathroom 2.png" width="1296px" height="785px">
+        <img src="Smart-House-Images/Bathroom 3.png" width="1296px" height="785px">
+        <img src="Smart-House-Images/Bedroom 1.png" width="1296px" height="785px">
+        <img src="Smart-House-Images/bedroom 2.png" width="1296px" height="785px">
+        <img src="Smart-House-Images/Bedroom 3.png" width="1296px" height="785px">
+        <img src="Smart-House-Images/Bedroom 4.png" width="1296px" height="785px">
+        <img src="Smart-House-Images/kitchen.png" width="1296px" height="785px">
+        <img src="Smart-House-Images/livingroom.png" width="1296px" height="785px">
 
-        <h2>Nursey</h2>
-        <img src="Smart-House-Images/Nursery.png" width="500" height="350">
+        <p> Experience Comfort and Safety in Your Home!
+
+            Step into a sanctuary where cozy interiors meet advanced safety features. Enjoy smart security systems,
+            automated comfort controls, and child and pet safety measures. With soundproofing for privacy,
+            this home is designed for modern living. Schedule a tour today to explore your future oasis! 
+            Click or scroll on the photos to see more!</p>
+
         <p>
             <br><a href=../Smart-Home/Automated-Features.html>Automated Features</a></br>
             <br><a href=../Smart-Home/Safety.html>Safety</a></br>
             <br><a href=../Smart-Home/Home-page.html>Homepage</a></br></p>
+
+            <footer>© 2024 Dream Homes Realty | All Rights Reserved 1234 Realty Lane, Suite 100 | Hometown, ST 12345 Phone: (123) 456-7890 | Email: info@smarthomes.com</footer>
     </body>
 </html>
