--- a/Smart-Home/Safety.html
+++ b/Smart-Home/Safety.html
@@ -2,24 +2,35 @@
 <html lang='en'>
     <head>
         <title>Amenities</title>
+        <link href="app.css" rel="stylesheet">
     </head>
     <body>
 
-        <h2>Safety Features</h2>
-        <ul>
-            <img src="Smart-House-Images/Fire Alarm.png" width="500" height="350">
-            <li>Fire Alarms With Sprinklers</li>
-            <img src="Smart-House-Images/Water Rat.png" width="500" height="350">
-            <li>Water Rats</li>
-            <img src="Smart-House-Images/Robot.png" width="500" height="350">
-            <li>Robots</li>
-            <img src="Smart-House-Images/Robot Snake.png" width="500" height="350">
-            <li>20 Robotic Snakes</li>
-        </ul>
+            <img src="Smart-House-Images/Fire Alarm.png" width="1007px" height="622px">
+            <p>Ensure your safety with a fire detector that not only alerts you to smoke and heat but also connects to your smart home system. Receive instant notifications and enjoy peace of mind knowing you’re protected.</p>
+            <p>Ensure safety with our advanced automated ceiling sprinklers that activate at the first sign of fire. Designed for quick response and efficient coverage, they help safeguard your home and loved ones.</p>
+            <img src="Smart-House-Images/" width="1007px" height="622px">
+            <h2>Meet the Fire-Fighting Robot Rats!</h2>
+            <p>Protect your home with our innovative robot rats that release water to extinguish fires.
+                Designed for quick deployment, they navigate through your space to combat flames effectively. 
+                Ensure safety and peace of mind—schedule a demonstration today!</p>
+            <img src="Smart-House-Images/Robot.png" width="1007px" height="622px">
+            <h2>Introducing the Fire-Extinguishing Robot!</h2>
+            <p> Stay safe with our cutting-edge robot that releases green foam to combat fires. 
+                Engineered for quick response, it effectively suppresses flames while minimizing damage. 
+                Protect your home and loved ones—schedule a demonstration today!</p>
+            <img src="Smart-House-Images/Robot Snake.png" width="1007px" height="622px">
+            <h2>Introducing the Fire-Prevention Robot Snake!</h2>
+            <p>Protect your home with our innovative robot snake that releases green foam to extinguish fires. 
+                Designed to quickly respond to emergencies, it navigates seamlessly and provides effective fire suppression at the source. 
+                Ensure your safety—schedule a demonstration today!</p>
+    
         <h2>Learn More About The New Smart House</h2>
         <p>
             <br><a href=../Smart-Home/Automated-Features.html>Automated Features</a></br>
             <br><a href=../Smart-Home/Inside.html>Inside</a></br>
             <br><a href=../Smart-Home/Home-page.html>Homepage</a></br></p>
+
+            <footer>© 2024 Dream Homes Realty | All Rights Reserved 1234 Realty Lane, Suite 100 | Hometown, ST 12345 Phone: (123) 456-7890 | Email: info@smarthomes.com</footer>
     </body>
 </html>
