--- a/Smart-Home/Home-page.html
+++ b/Smart-Home/Home-page.html
@@ -7,13 +7,14 @@
 </head>
 
 <body>
+    <img src="Smart-House-Images/logo-circle.png" width="108px" height="108px">
     <img src="Smart-House-Images/warm-smart.png" width="1440px" height="737px">
     <h2>Your New Smart House Awaits</h2>
     <p>
         Welcome to the future of living with our advanced Smart House, where cutting-edge technology and top-tier
         security redefine modern comfort.
         This exceptional home features <strong>4 spacious bedrooms, 2 full bathrooms, and a stylish
-            half-bathroom</strong>, all seamlessly managed by the innovative "Brain of the House" system.
+        half-bathroom</strong>, all seamlessly managed by the innovative "Brain of the House" system.
         Experience unparalleled convenience with a climate control system that adapts to your preferences, while voice
         controls let you effortlessly manage lighting, appliances, and entertainment.
         The high-speed Wi-Fi throughout the house ensures smooth connectivity for all your digital needs.
@@ -51,8 +52,10 @@
             <br><a href=../Smart-Home/Automated-Features.html>Automated Features</a></br>
             <br><a href=../Smart-Home/Safety.html>Safety</a></br>
         </p>
-    <footer>© 2024 Dream Homes Realty | All Rights Reserved 1234 Realty Lane, Suite 100 | Hometown, ST 12345 Phone: (123) 456-7890 | Email: info@smarthomes.com</footer>
-
+    <footer>
+        <p>© 2024 Dream Homes Realty | All Rights Reserved 1234 Realty Lane, Suite 100 | Hometown, ST 12345 Phone: (123) 456-7890 | Email: info@smarthomes.com</p>
+        <img src="Smart-House-Images/logo.png" width="285px" height="285px">
+    </footer>
 
 </body>
 
