--- a/Smart-Home/Safety.html
+++ b/Smart-Home/Safety.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
 <html lang='en'>
     <head>
-        <title>Amenities</title>
+        <title>Safety Features</title>
         <link href="app.css" rel="stylesheet">
     </head>
     <body>
 
-            <img src="Smart-House-Images/Fire Alarm.png" width="1007px" height="622px">
+            <img src="Smart-House-Images/warm-fire-alarm.png" width="1007px" height="622px">
+            <img src="Smart-House-Images/warm-celling-sprinklers.png" width="1007px" height="622px">
             <p>Ensure your safety with a fire detector that not only alerts you to smoke and heat but also connects to your smart home system. Receive instant notifications and enjoy peace of mind knowing you’re protected.</p>
             <p>Ensure safety with our advanced automated ceiling sprinklers that activate at the first sign of fire. Designed for quick response and efficient coverage, they help safeguard your home and loved ones.</p>
-            <img src="Smart-House-Images/" width="1007px" height="622px">
+            <img src="Smart-House-Images/warm-water-rats.png" width="1007px" height="622px">
             <h2>Meet the Fire-Fighting Robot Rats!</h2>
             <p>Protect your home with our innovative robot rats that release water to extinguish fires.
                 Designed for quick deployment, they navigate through your space to combat flames effectively. 
                 Ensure safety and peace of mind—schedule a demonstration today!</p>
-            <img src="Smart-House-Images/Robot.png" width="1007px" height="622px">
+            <img src="Smart-House-Images/warm-fire-fighting-robots.png" width="1007px" height="622px">
             <h2>Introducing the Fire-Extinguishing Robot!</h2>
             <p> Stay safe with our cutting-edge robot that releases green foam to combat fires. 
                 Engineered for quick response, it effectively suppresses flames while minimizing damage. 
                 Protect your home and loved ones—schedule a demonstration today!</p>
-            <img src="Smart-House-Images/Robot Snake.png" width="1007px" height="622px">
+            <img src="Smart-House-Images/warm-robot-snake.png" width="1007px" height="622px">
             <h2>Introducing the Fire-Prevention Robot Snake!</h2>
             <p>Protect your home with our innovative robot snake that releases green foam to extinguish fires. 
                 Designed to quickly respond to emergencies, it navigates seamlessly and provides effective fire suppression at the source. 
