--- a/Smart-Home/Inside.html
+++ b/Smart-Home/Inside.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang='en'>
     <head>
-        <title>Special Rooms Feature In Your New Smart House</title>
+        <title>Interior</title>
         <link href="app.css" rel="stylesheet">
     </head>
     <body>
