--- a/Smart-Home/Home-page.html
+++ b/Smart-Home/Home-page.html
@@ -2,13 +2,14 @@
 <html lang='en'>
 
 <head>
+    <meta charset="UTF-8">
     <title>Smart Home</title>
-    <link href="app.css" rel="stylesheet">
+    <link rel="stylesheet" href="mystyle.css">
 </head>
 
 <body>
     <img src="Smart-House-Images/logo-circle.png" width="108px" height="108px">
-    <img src="Smart-House-Images/warm-smart.png" width="1440px" height="737px">
+    <img src="Smart-House-Images/warm-smart-house.png" width="1440px" height="737px">
     <h2>Your New Smart House Awaits</h2>
     <p>
         Welcome to the future of living with our advanced Smart House, where cutting-edge technology and top-tier
@@ -28,13 +29,13 @@
         and security.
         Discover how our Smart House, powered by the Brain of the House, can elevate your living experience and bring
         the future to your doorstep.</p>
-    <img src="Smart-House-Images/warm-safety.png" width="603px" height="423px">
+    <img src="Smart-House-Images/warm-safety-features.png" width="603px" height="423px">
     <h2>Secure Your Peace of Mind!</h2>
     <p> Our home features advanced safety systems, including smart locks, security cameras, and smoke detectors. 
         Enjoy child and pet safety measures, plus emergency preparedness tools. Relax knowing your home is a secure sanctuary. 
         Schedule a visit today to experience the peace of mind our safety features offer!</p>
 
-    <img src="Smart-House-Images/Interior.png" width="603px" height="423px">
+    <img src="Smart-House-Images/warm-interior.png" width="603px" height="423px">
     <h2>Explore Your Dream Home!</h2>
     <p> Step inside to find a bright, spacious layout with modern finishes and high-end appliances. 
         Enjoy cozy bedrooms, luxurious bathrooms, and flexible spaces that fit your lifestyle.
