--- a/Smart-Home/Home-page.html
+++ b/Smart-Home/Home-page.html
@@ -2,61 +2,51 @@
 <html lang='en'>
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset='UTF-8'/>
     <title>Smart Home</title>
-    <link rel="stylesheet" href="mystyle.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <img src="Smart-House-Images/logo-circle.png" width="108px" height="108px">
-    <img src="Smart-House-Images/warm-smart-house.png" width="1440px" height="737px">
-    <h2>Your New Smart House Awaits</h2>
+    <div class="header">
     <p>
-        Welcome to the future of living with our advanced Smart House, where cutting-edge technology and top-tier
-        security redefine modern comfort.
-        This exceptional home features <strong>4 spacious bedrooms, 2 full bathrooms, and a stylish
-        half-bathroom</strong>, all seamlessly managed by the innovative "Brain of the House" system.
-        Experience unparalleled convenience with a climate control system that adapts to your preferences, while voice
-        controls let you effortlessly manage lighting, appliances, and entertainment.
-        The high-speed Wi-Fi throughout the house ensures smooth connectivity for all your digital needs.
-        Your safety is paramount with the integrated security system, which includes many automated features all
-        centrally controlled by the Brain of the House.
-        This system also manages a smart doorbell for easy visitor and delivery management and provides automated
-        emergency alerts for smoke, fire, and carbon monoxide, ensuring rapid responses and peace of mind.
-        The exterior’s motion-activated lighting further enhances security, automatically illuminating your surroundings
-        when needed.
-        Step into a home where every feature is intelligently managed to offer you unparalleled comfort, convenience,
-        and security.
-        Discover how our Smart House, powered by the Brain of the House, can elevate your living experience and bring
-        the future to your doorstep.</p>
-    <img src="Smart-House-Images/warm-safety-features.png" width="603px" height="423px">
-    <h2>Secure Your Peace of Mind!</h2>
+        <img src="Smart-House-Images/logo-circle.png" width="108px" height="108px">
+        <br><a href=../Smart-Home/Inside.html>Inside</a></br>
+        <br><a href=../Smart-Home/Automated-Features.html>Automated Features</a></br>
+        <br><a href=../Smart-Home/Safety.html>Safety</a></br>
+    </p>
+</div>
+
+
+    <img src="Smart-House-Images/warm-smart-house.png" width="1440px" height="737px">
+    <img src="Smart-House-Images/warm-safety-features.png" width="603px" height="423px"> </div>
+    <img src="Smart-House-Images/warm-interior.png" width="603px" height="423px"></div>
+    <img src="Smart-House-Images/warm-automated-features.png" width="603px" height="423px"></div>
+      
+    <div class="text"><h2>Secure Your Peace of Mind!</h2>
     <p> Our home features advanced safety systems, including smart locks, security cameras, and smoke detectors. 
         Enjoy child and pet safety measures, plus emergency preparedness tools. Relax knowing your home is a secure sanctuary. 
         Schedule a visit today to experience the peace of mind our safety features offer!</p>
+    </div>
 
-    <img src="Smart-House-Images/warm-interior.png" width="603px" height="423px">
-    <h2>Explore Your Dream Home!</h2>
+     <div class="text"> <h2>Explore Your Dream Home!</h2>
     <p> Step inside to find a bright, spacious layout with modern finishes and high-end appliances. 
         Enjoy cozy bedrooms, luxurious bathrooms, and flexible spaces that fit your lifestyle.
         Built for efficiency, this home enhances daily living. Schedule your tour today and envision your future here!</p>
+    </div> 
 
-    <img src="Smart-House-Images/warm-automated-features.png" width="603px" height="423px">
-    <h2>Experience the Future of Living!</h2>
+
+    <div class="text"><h2>Experience the Future of Living!</h2>
 
     <p> Our automated home offers unmatched convenience with smart controls for lights, security, and appliances. 
         Enjoy enhanced safety with smart locks and cameras, plus energy savings with automated thermostats. 
         Seamlessly integrate your devices for a harmonious lifestyle. Do not miss the chance to elevate your everyday living—schedule a visit today!</p>
-
-        <p>
-            <br><a href=../Smart-Home/Inside.html>Inside</a></br>
-            <br><a href=../Smart-Home/Automated-Features.html>Automated Features</a></br>
-            <br><a href=../Smart-Home/Safety.html>Safety</a></br>
-        </p>
-    <footer>
+    </div>
+        <div class="footer"><footer>
         <p>© 2024 Dream Homes Realty | All Rights Reserved 1234 Realty Lane, Suite 100 | Hometown, ST 12345 Phone: (123) 456-7890 | Email: info@smarthomes.com</p>
         <img src="Smart-House-Images/logo.png" width="285px" height="285px">
     </footer>
+    </div>
 
 </body>
 
