--- a/Smart-Home/Automated-Features.html
+++ b/Smart-Home/Automated-Features.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html lang='en'>
     <head>
+        <meta charset='UTF-8'/>
         <title>Automated Features</title>
-        <link href="app.css" rel="stylesheet">
+        <link rel="stylesheet" href="styles.css">
     </head>
-    <body>
+   
+        <body>
+            <nav class="navbar">
+            <ul>
+                <li> <a href=../Smart-Home/Home-page.html><img src="Smart-House-Images/logo-circle.png" width="50px" height="50px"></a></li>
+                <li><a href=../Smart-Home/Inside.html>Inside</a></li>
+                <li><a href=../Smart-Home/Automated-Features.html>Automated Features</a></li>
+                <li><a href=../Smart-Home/Safety.html>Safety</a></li>
+            </ul>
+        </nav>
         <h2>Automated Technology</h2>
 
        
