--- a/Smart-Home/Home-page.html
+++ b/Smart-Home/Home-page.html
@@ -8,16 +8,16 @@
 </head>
 
 <body>
-    <div class="header">
-    <p>
-        <img src="Smart-House-Images/logo-circle.png" width="108px" height="108px">
-        <br><a href=../Smart-Home/Inside.html>Inside</a></br>
-        <br><a href=../Smart-Home/Automated-Features.html>Automated Features</a></br>
-        <br><a href=../Smart-Home/Safety.html>Safety</a></br>
-    </p>
-</div>
+    <nav class="navbar">
+    <ul>
+       <li> <a href=../Smart-Home/Home-page.html><img src="Smart-House-Images/logo.png" width="50px" height="50px"></a></li>
+        <li><a href=../Smart-Home/Inside.html>Inside</a></li>
+        <li><a href=../Smart-Home/Automated-Features.html>Automated Features</a></li>
+        <li><a href=../Smart-Home/Safety.html>Safety</a></li>
+    </ul>
+</nav>
 
-
+<main>
     <img src="Smart-House-Images/warm-smart-house.png" width="1440px" height="737px">
     <img src="Smart-House-Images/warm-safety-features.png" width="603px" height="423px"> </div>
     <img src="Smart-House-Images/warm-interior.png" width="603px" height="423px"></div>
@@ -41,6 +41,7 @@
     <p> Our automated home offers unmatched convenience with smart controls for lights, security, and appliances. 
         Enjoy enhanced safety with smart locks and cameras, plus energy savings with automated thermostats. 
         Seamlessly integrate your devices for a harmonious lifestyle. Do not miss the chance to elevate your everyday living—schedule a visit today!</p>
+    </main>
     </div>
         <div class="footer"><footer>
         <p>© 2024 Dream Homes Realty | All Rights Reserved 1234 Realty Lane, Suite 100 | Hometown, ST 12345 Phone: (123) 456-7890 | Email: info@smarthomes.com</p>
