--- a/Smart-Home/Home-page.html
+++ b/Smart-Home/Home-page.html
@@ -6,16 +6,14 @@
     <title>Smart Home</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
     <nav class="navbar">
-    <ul>
-       <li> <a href=../Smart-Home/Home-page.html><img src="Smart-House-Images/logo.png" width="50px" height="50px"></a></li>
-        <li><a href=../Smart-Home/Inside.html>Inside</a></li>
-        <li><a href=../Smart-Home/Automated-Features.html>Automated Features</a></li>
-        <li><a href=../Smart-Home/Safety.html>Safety</a></li>
-    </ul>
-</nav>
+        <a class="navlogo" href=../Smart-Home/Home-page.html><img src="Smart-House-Images/logo.png" alt="company logo"></a>
+        <a class="navtabs" href=../Smart-Home/Inside.html>Inside</a>
+        <a href=../Smart-Home/Automated-Features.html>Automated Features</a>
+        <a href=../Smart-Home/Safety.html>Safety</a>
+        </nav>
+       
 
 <main>
     <img src="Smart-House-Images/warm-smart-house.png" width="1440px" height="737px">
