--- a/Smart-Home/Safety.html
+++ b/Smart-Home/Safety.html
@@ -8,12 +8,12 @@
     
         <body>
             <nav class="navbar">
-            <ul>
-                <li> <a href=../Smart-Home/Home-page.html><img src="Smart-House-Images/logo-circle.png" width="50px" height="50px"></a></li>
+                <div class="navlogo">
+                 <li> <a href=../Smart-Home/Home-page.html><img src="Smart-House-Images/logo-circle.png" width="50px" height="50px"></a></li>
+                </div>
                 <li><a href=../Smart-Home/Inside.html>Inside</a></li>
                 <li><a href=../Smart-Home/Automated-Features.html>Automated Features</a></li>
                 <li><a href=../Smart-Home/Safety.html>Safety</a></li>
-            </ul>
         </nav>
 
             <img src="Smart-House-Images/warm-fire-alarm.png" width="1007px" height="622px">
