--- a/Smart-Home/Automated-Features.html
+++ b/Smart-Home/Automated-Features.html
@@ -7,14 +7,13 @@
     </head>
    
         <body>
-            <nav class="navbar">
-            <ul>
-                <li> <a href=../Smart-Home/Home-page.html><img src="Smart-House-Images/logo-circle.png" width="50px" height="50px"></a></li>
-                <li><a href=../Smart-Home/Inside.html>Inside</a></li>
-                <li><a href=../Smart-Home/Automated-Features.html>Automated Features</a></li>
-                <li><a href=../Smart-Home/Safety.html>Safety</a></li>
-            </ul>
-        </nav>
+            <body>
+                <nav class="navbar">
+                    <a class="navlogo" href=../Smart-Home/Home-page.html><img src="Smart-House-Images/logo.png" alt="company logo"></a>
+                        <a class="navtabs" href=../Smart-Home/Inside.html>Inside</a>
+                        <a href=../Smart-Home/Automated-Features.html>Automated Features</a>
+                        <a href=../Smart-Home/Safety.html>Safety</a>
+                        </nav>
         <h2>Automated Technology</h2>
 
        
