--- a/Smart-Home/Safety.html
+++ b/Smart-Home/Safety.html
@@ -6,15 +6,13 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     
-        <body>
-            <nav class="navbar">
-                <div class="navlogo">
-                 <li> <a href=../Smart-Home/Home-page.html><img src="Smart-House-Images/logo-circle.png" width="50px" height="50px"></a></li>
-                </div>
-                <li><a href=../Smart-Home/Inside.html>Inside</a></li>
-                <li><a href=../Smart-Home/Automated-Features.html>Automated Features</a></li>
-                <li><a href=../Smart-Home/Safety.html>Safety</a></li>
-        </nav>
+    <body>
+        <nav class="navbar">
+            <a class="navlogo" href=../Smart-Home/Home-page.html><img src="Smart-House-Images/logo.png" alt="company logo"></a>
+                <a class="navtabs" href=../Smart-Home/Inside.html>Inside</a>
+                <a href=../Smart-Home/Automated-Features.html>Automated Features</a>
+                <a href=../Smart-Home/Safety.html>Safety</a>
+                </nav>
 
             <img src="Smart-House-Images/warm-fire-alarm.png" width="1007px" height="622px">
             <img src="Smart-House-Images/warm-celling-sprinklers.png" width="1007px" height="622px">
