--- a/Smart-Home/Home-page.html
+++ b/Smart-Home/Home-page.html
@@ -19,30 +19,46 @@
 <main>
 
     <img class="fimg" src="Smart-House-Images/warm-smart-house.png" width="1440px" height="737px"></div>
-    <img src="Smart-House-Images/warm-safety-features.png" width="603px" height="423px"> </div>
-    <img src="Smart-House-Images/warm-interior.png" width="603px" height="423px"></div>
-    <img src="Smart-House-Images/warm-automated-features.png" width="603px" height="423px">
     
-    <div class="text"><h2>Secure Your Peace of Mind!</h2>
-    <p> Our home features advanced safety systems, including smart locks, security cameras, and smoke detectors. 
-        Enjoy child and pet safety measures, plus emergency preparedness tools. Relax knowing your home is a secure sanctuary. 
-        Schedule a visit today to experience the peace of mind our safety features offer!</p>
+    <div class="card-container">
+     <div class="card">  
+    <img src="Smart-House-Images/warm-safety-features.png" width="603px" height="423px"> 
+    <div class="card-content">
+        <div class="text"><h2>Secure Your Peace of Mind!</h2>
+            <p> Our home features advanced safety systems, including smart locks, security cameras, and smoke detectors. 
+                Enjoy child and pet safety measures, plus emergency preparedness tools. Relax knowing your home is a secure sanctuary. 
+                Schedule a visit today to experience the peace of mind our safety features offer!</p>
+            </div>
     </div>
+    </div>   
 
-     <div class="text"> <h2>Explore Your Dream Home!</h2>
-    <p> Step inside to find a bright, spacious layout with modern finishes and high-end appliances. 
-        Enjoy cozy bedrooms, luxurious bathrooms, and flexible spaces that fit your lifestyle.
-        Built for efficiency, this home enhances daily living. Schedule your tour today and envision your future here!</p>
-    </div> 
+    <div class="card-container">
+        <div class="card">  
+            <img src="Smart-House-Images/warm-interior.png" width="603px" height="423px">
+       <div class="card-content">
+        <div class="text"> <h2>Explore Your Dream Home!</h2>
+            <p> Step inside to find a bright, spacious layout with modern finishes and high-end appliances. 
+                Enjoy cozy bedrooms, luxurious bathrooms, and flexible spaces that fit your lifestyle.
+                Built for efficiency, this home enhances daily living. Schedule your tour today and envision your future here!</p>
+            </div> 
+       </div>
+       </div>   
 
+       <div class="card-container">
+        <div class="card">  
+            <img src="Smart-House-Images/warm-automated-features.png" width="603px" height="423px">
+       <div class="card-content">
+        <div class="text"><h2>Experience the Future of Living!</h2>
 
-    <div class="text"><h2>Experience the Future of Living!</h2>
-
-    <p> Our automated home offers unmatched convenience with smart controls for lights, security, and appliances. 
-        Enjoy enhanced safety with smart locks and cameras, plus energy savings with automated thermostats. 
-        Seamlessly integrate your devices for a harmonious lifestyle. Do not miss the chance to elevate your everyday living—schedule a visit today!</p>
+            <p> Our automated home offers unmatched convenience with smart controls for lights, security, and appliances. 
+                Enjoy enhanced safety with smart locks and cameras, plus energy savings with automated thermostats. 
+                Seamlessly integrate your devices for a harmonious lifestyle. Do not miss the chance to elevate your everyday living—schedule a visit today!</p>
+            
+            </div>
+       </div>
+       </div>   
     </main>
-    </div>
+   
 
         <div class="footer">
         <img class="footerlogo" src="Smart-House-Images/logo.png">
