--- a/Smart-Home/Safety.html
+++ b/Smart-Home/Safety.html
@@ -1,35 +1,37 @@
 <!DOCTYPE html>
 <html lang='en'>
     <head>
-        <meta charset='UTF-8'/>
         <title>Safety Features</title>
         <link rel="stylesheet" href="styles.css">
     </head>
     
     <body>
-        <section id="pagewrapper">
+        <div class="main">
+        <div class="pagewrapper">
         <nav class="navbar">
             <a class="navlogo" href=../Smart-Home/Home-page.html><img src="Smart-House-Images/logo.png" alt="company logo"></a>
             <a class="navtabs" href=../Smart-Home/Automated-Features.html>Automated Features</a>
             <a class="navtabs" href=../Smart-Home/Safety.html>Safety Features</a>
             <a class="navtabs" href=../Smart-Home/Inside.html>Interior</a>
             </nav>
+        </div>
 
             <div class="card-container">
                 <div class="card">  
-                    <img src="Smart-House-Images/warm-water-rats.png" width="1007px" height="622px">
+                    <img src="Smart-House-Images/warm-water-rats.png" alt="water rats">
                <div class="card-content">
                 <div class="text"> <h2>Meet the Fire-Fighting Robot Rats!</h2>
                     <p>Protect your home with our innovative robot rats that release water to extinguish fires.
                         Designed for quick deployment, they navigate through your space to combat flames effectively. 
                         Ensure safety and peace of mind—schedule a demonstration today!</p>
                     </div>
+                    </div>
                </div>
                </div>   
 
                <div class="card-container">
                 <div class="card">  
-                    <img src="Smart-House-Images/warm-fire-fighting-robots.png" width="1007px" height="622px">
+                    <img src="Smart-House-Images/warm-fire-fighting-robots.png" alt="fire fighting robots">
                <div class="card-content">
                 <div class="text"> <h2>Introducing the Fire-Extinguishing Robot!</h2>
                     <p> Stay safe with our cutting-edge robot that releases green foam to combat fires. 
@@ -37,23 +39,28 @@
                         Protect your home and loved ones—schedule a demonstration today!</p>
                     </div>
                </div>
+               </div>
                </div>   
 
                <div class="card-container">
                 <div class="card">  
-                    <img src="Smart-House-Images/warm-robot-snake.png" width="1007px" height="622px">
+                    <img src="Smart-House-Images/warm-robot-snake.png" alt="robot snake">
                <div class="card-content">
                 <div class="text"> <h2>Introducing the Fire-Prevention Robot Snake!</h2>
                     <p>Protect your home with our innovative robot snake that releases green foam to extinguish fires. 
                         Designed to quickly respond to emergencies, it navigates seamlessly and provides effective fire suppression at the source. 
                         Ensure your safety—schedule a demonstration today!</p>
                     </div>
+                    </div>
                </div>
                </div> 
-               <div class="footer">
-                <img class="footerlogo" src="Smart-House-Images/logo.png">
-                <p>© 2024 Dream Homes Realty | All Rights Reserved 1234 Realty Lane, Suite 100 | Hometown, ST 12345 Phone: (123) 456-7890 | Email: info@smarthomes.com</p>
-                </div>
-        </section>
+        </div>
+
+        <div class="footer"><footer>
+            <p>© 2024 Dream Homes Realty | All Rights Reserved 1234 Realty Lane, Suite 100 | Hometown, ST 12345 Phone: (123) 456-7890 | Email: info@smarthomes.com</p>
+            <img src="Smart-House-Images/logo.png" alt="logo">
+        </footer>
+        </div>
+        
     </body>
 </html>
