--- a/Smart-Home/Safety.html
+++ b/Smart-Home/Safety.html
@@ -59,11 +59,10 @@
         </div>
 
 
-        <div class="footer"><footer>
+        <div class="footer">
+            <img class="footerlogo" src="Smart-House-Images/logo.png">
             <p>© 2024 Dream Homes Realty | All Rights Reserved 1234 Realty Lane, Suite 100 | Hometown, ST 12345 Phone: (123) 456-7890 | Email: info@smarthomes.com</p>
-            <img src="Smart-House-Images/logo.png" alt="logo">
-        </footer>
-        </div>
+            </div>
         </section>
     </body>
 </html>
