--- a/Smart-Home/Home-page.html
+++ b/Smart-Home/Home-page.html
@@ -15,11 +15,11 @@
         <a class="navtabs" href=../Smart-Home/Safety.html>Safety Features</a>
         <a class="navtabs" href=../Smart-Home/Inside.html>Interior</a>
         </nav>
-<main>
-    <img class="fimg" src="Smart-House-Images/warm-smart-house.png"></div>
+        <div class="main">
+    <img class="fimg" src="Smart-House-Images/warm-smart-house.png" alt="smart house"></div>
     <div class="card-container-home">
-     <div class="card">  
-    <img src="Smart-House-Images/warm-safety-features.png" width="603px" height="423px">
+    <div class="card">  
+    <img src="Smart-House-Images/warm-automated-features.png" alt="interior">
     <div class="card-content">
         <div class="text"><h2>Secure Your Peace of Mind!</h2>
             <p> Our home features advanced safety systems, including smart locks, security cameras, and smoke detectors.
@@ -29,7 +29,7 @@
     </div>
     </div>
         <div class="card">  
-            <img src="Smart-House-Images/warm-interior.png" width="603px" height="423px">
+            <img src="Smart-House-Images/warm-safety-features.png" alt="safety features">
        <div class="card-content">
         <div class="text"> <h2>Explore Your Dream Home!</h2>
             <p> Step inside to find a bright, spacious layout with modern finishes and high-end appliances.
@@ -41,7 +41,7 @@
 </div>
 <div class="card-container-home1">
         <div class="card">  
-            <img src="Smart-House-Images/warm-automated-features.png" width="603px" height="423px">
+            <img src="Smart-House-Images/warm-interior.png" alt="interior">
        <div class="card-content">
         <div class="text"><h2>Experience the Future of Living!</h2>
             <p> Our automated home offers unmatched convenience with smart controls for lights, security, and appliances.
@@ -51,9 +51,8 @@
        </div>
        </div>  
     </div>
-</main>
         <div class="footer">
-        <img class="footerlogo" src="Smart-House-Images/logo.png">
+        <img class="footerlogo" src="Smart-House-Images/logo.png" alt="logo">
         <p>© 2024 Dream Homes Realty | All Rights Reserved 1234 Realty Lane, Suite 100 | Hometown, ST 12345 Phone: (123) 456-7890 | Email: info@smarthomes.com</p>
         </div>
 </section>
