--- a/Smart-Home/Safety.html
+++ b/Smart-Home/Safety.html
@@ -5,7 +5,6 @@
         <title>Safety Features</title>
         <link rel="stylesheet" href="styles.css">
     </head>
-   
     <body>
         <section id="pagewrapper">
             <nav class="navbar">
@@ -28,8 +27,6 @@
                     </div>
                </div>
                </div>  
-
-
                <div class="card-container">
                 <div class="card">  
                     <img src="Smart-House-Images/warm-fire-fighting-robots.png" alt="fire fighting robots">
@@ -42,8 +39,6 @@
                </div>
                </div>
                </div>  
-
-
                <div class="card-container">
                 <div class="card">  
                     <img src="Smart-House-Images/warm-robot-snake.png" alt="robot snake">
@@ -57,10 +52,8 @@
                </div>
                </div>
         </div>
-
-
         <div class="footer">
-            <img class="footerlogo" src="Smart-House-Images/logo.png">
+            <img class="footerlogo" src="Smart-House-Images/logo.png" alt="logo">
             <p>© 2024 Dream Homes Realty | All Rights Reserved 1234 Realty Lane, Suite 100 | Hometown, ST 12345 Phone: (123) 456-7890 | Email: info@smarthomes.com</p>
             </div>
         </section>
