--- a/Smart-Home/Automated-Features.html
+++ b/Smart-Home/Automated-Features.html
@@ -20,7 +20,7 @@
                     <div class="card">  
                     <img src="Smart-House-Images/warm-brain.png" alt="brain">  
                     <div class="text2">
-                    <p>Control all your automated features seamlessly from one central hub. Enjoy easy management of lighting, security, climate, and entertainment. Elevate your living experience</p>  
+                    <p>Control all your automated features seamlessly from one central hub. Enjoy easy management of lighting, security, climate, and entertainment. Elevate your living experience.</p>  
                     </div>
                     </div>
                     </div>      
@@ -60,7 +60,7 @@
                     <div class="card">  
                     <img src="Smart-House-Images/warm-breakfast-stove.png" alt="stove">
                     <div class="text2">
-                    <p>Enjoy perfectly cooked meals at the touch of a button. Our automated stove prepares your breakfast while you relax, ensuring delicious results every time. Elevate your mornings</p>
+                    <p>Enjoy perfectly cooked meals at the touch of a button. Our automated stove prepares your breakfast while you relax, ensuring delicious results every time. Elevate your mornings!</p>
                     </div>
                     </div>
                     </div>  
