--- a/Smart-Home/Inside.html
+++ b/Smart-Home/Inside.html
@@ -8,10 +8,10 @@
     <body>
         <section id="pagewrapper">
             <nav class="navbar">
-                <a class="navlogo" href=../Smart-Home/Home-page.html><img src="Smart-House-Images/logo.png" alt="company logo"></a>
-                <a class="navtabs" href=../Smart-Home/Automated-Features.html>Automated Features</a>
-                <a class="navtabs" href=../Smart-Home/Safety.html>Safety Features</a>
-                <a class="navtabs" href=../Smart-Home/Inside.html>Interior</a>
+                <a class="navlogo" href="index.html"><img src="Smart-House-Images/logo.png" alt="company logo"></a>
+                <a class="navtabs" href="Automated-Features.html">Automated Features</a>
+                <a class="navtabs" href="Safety.html">Safety Features</a>
+                <a class="navtabs" href="Inside.html">Interior</a>
                 </nav>
                 <h1>Interior Features</h1>
     <div class="wrapcon">
