--- a/Smart-Home/Inside.html
+++ b/Smart-Home/Inside.html
@@ -16,18 +16,18 @@
                 <h1>Interior Features</h1>
     <div class="wrapcon">
           <a class="container">
-                <img class="wrapper" src="Smart-House-Images/Study.png" alt="study">
-                <img class="wrapper" src="Smart-House-Images/Nursery.png" alt="nursery">
-                <img class="wrapper" src="Smart-House-Images/Bathroom-1.png" alt="bathroom 1">
-                <img class="wrapper" src="Smart-House-Images/Bathroom-2.png" alt="bathroom 2">
-                <img class="wrapper" src="Smart-House-Images/Bathroom-3.png" alt="bathroom 3">
-                <img class="wrapper" src="Smart-House-Images/Bedroom-1.png" alt="bedroom 1">
-                <img class="wrapper" src="Smart-House-Images/bedroom-2.png" alt="bedroom 2">
-                <img class="wrapper" src="Smart-House-Images/Bedroom-3.png" alt="bedroom 3">
-                <img class="wrapper" src="Smart-House-Images/Bedroom-4.png" alt="bedroom 4">
-                <img class="wrapper" src="Smart-House-Images/kitchen.png" alt="kitchen">
-                <img class="wrapper" src="Smart-House-Images/livingroom.png" alt="livingroom">
-                <img class="wrapper" src="Smart-House-Images/Study.png" alt="study">
+                <img class="wrapper" src="Smart-Home/Smart-House-Images/Study-1.2k.jpg" alt="study">
+                <img class="wrapper" src="Smart-Home/Smart-House-Images/Nursery-1.2k.jpg" alt="nursery">
+                <img class="wrapper" src="Smart-Home/Smart-House-Images/Bathroom-1-1.2k.jpg" alt="bathroom 1">
+                <img class="wrapper" src="Smart-Home/Smart-House-Images/Bathroom-2-1.2k.jpg" alt="bathroom 2">
+                <img class="wrapper" src="Smart-Home/Smart-House-Images/Bathroom-3-1.2k.jpg" alt="bathroom 3">
+                <img class="wrapper" src="Smart-Home/Smart-House-Images/Bedroom-1-1.2k.jpg" alt="bedroom 1">
+                <img class="wrapper" src="Smart-Home/Smart-House-Images/Bedroom-2-1.2k.jpg" alt="bedroom 2">
+                <img class="wrapper" src="Smart-Home/Smart-House-Images/Bedroom-3-1.2k.jpg" alt="bedroom 3">
+                <img class="wrapper" src="Smart-Home/Smart-House-Images/Bedroom-4-1.2k.jpg" alt="bedroom 4">
+                <img class="wrapper" src="Smart-Home/Smart-House-Images/kitchen-1.2k.jpg" alt="kitchen">
+                <img class="wrapper" src="Smart-Home/Smart-House-Images/livingroom-1.2k.jpg" alt="livingroom">
+                <img class="wrapper" src="Smart-Home/Smart-House-Images/Study-1.2k.jpg" alt="study">
           </a>
           </div>
           <div class="text3">
