--- a/Smart-Home/Safety.html
+++ b/Smart-Home/Safety.html
@@ -17,7 +17,7 @@
                     <h1>Safety Features</h1>
             <div class="card-container">
                 <div class="card">  
-                    <img src="Smart-House-Images/warm-water-rats.png" alt="water rats">
+                    <img src="Smart-Home/Smart-House-Images/warm-water-rats-1.2k.jpg" alt="water rats">
                <div class="card-content">
                 <div class="text"> <h2>Meet the Fire-Fighting Robot Rats!</h2>
                     <p>Protect your home with our innovative robot rats that release water to extinguish fires.
@@ -29,7 +29,7 @@
                </div>  
                <div class="card-container">
                 <div class="card">  
-                    <img src="Smart-House-Images/warm-fire-fighting-robots.png" alt="fire fighting robots">
+                    <img src="Smart-Home/Smart-House-Images/warm-fire-fighting-robots-1.2k.jpg" alt="fire fighting robots">
                <div class="card-content">
                 <div class="text"> <h2>Introducing the Fire-Extinguishing Robot!</h2>
                     <p> Stay safe with our cutting-edge robot that releases green foam to combat fires.
@@ -41,7 +41,7 @@
                </div>  
                <div class="card-container">
                 <div class="card">  
-                    <img src="Smart-House-Images/warm-robot-snake.png" alt="robot snake">
+                    <img src="Smart-Home/Smart-House-Images/warm-robot-snake-1.2k.jpg" alt="robot snake">
                <div class="card-content">
                 <div class="text"> <h2>Introducing the Fire-Prevention Robot Snake!</h2>
                     <p>Protect your home with our innovative robot snake that releases green foam to extinguish fires.
