--- a/Smart-Home/index.html
+++ b/Smart-Home/index.html
@@ -16,10 +16,10 @@
         <a class="navtabs" href="Inside.html">Interior</a>
         </nav>
         <div class="main">
-    <img class="fimg" src="Smart-House-Images/warm-smart-house.png" alt="smart house"></div>
+    <img class="fimg" src="Smart-Home/Smart-House-Images/warm-smart-house-1.2k.jpg" alt="smart house"></div>
     <div class="card-container-home">
     <div class="card">  
-    <img src="Smart-House-Images/warm-automated-features.png" alt="interior">
+    <img src="Smart-Home/Smart-House-Images/warm-automated-features-1.2k.jpg" alt="interior">
     <div class="card-content">
         <div class="text"><h2>Secure Your Peace of Mind!</h2>
             <p> Our home features advanced safety systems, including smart locks, security cameras, and smoke detectors.
@@ -29,7 +29,7 @@
     </div>
     </div>
         <div class="card">  
-            <img src="Smart-House-Images/warm-safety-features.png" alt="safety features">
+            <img src="Smart-Home/Smart-House-Images/warm-safety-features-1.2k.jpg" alt="safety features">
        <div class="card-content">
         <div class="text"> <h2>Explore Your Dream Home!</h2>
             <p> Step inside to find a bright, spacious layout with modern finishes and high-end appliances.
@@ -41,7 +41,7 @@
 </div>
 <div class="card-container-home1">
         <div class="card">  
-            <img src="Smart-House-Images/warm-interior.png" alt="interior">
+            <img src="Smart-Home/Smart-House-Images/warm-interior-1.2k.jpg" alt="interior">
        <div class="card-content">
         <div class="text"><h2>Experience the Future of Living!</h2>
             <p> Our automated home offers unmatched convenience with smart controls for lights, security, and appliances.
