--- a/Smart-Home/Automated-Features.html
+++ b/Smart-Home/Automated-Features.html
@@ -18,7 +18,7 @@
                 <div class="card-grid">
                     <div class="card-container">
                     <div class="card">  
-                    <img src="Smart-House-Images/warm-brain.png" alt="brain">  
+                    <img src="Smart-Home/Smart-House-Images/warm-brain-1.2k.jpg" alt="brain">  
                     <div class="text2">
                     <p>Control all your automated features seamlessly from one central hub. Enjoy easy management of lighting, security, climate, and entertainment. Elevate your living experience.</p>  
                     </div>
@@ -26,7 +26,7 @@
                     </div>      
                     <div class="card-container">
                     <div class="card">  
-                    <img src="Smart-House-Images/warm-memory-tapes.png" alt="memory-tapes">
+                    <img src="Smart-Home/Smart-House-Images/warm-memory-tapes-1.2k.jpg" alt="memory-tapes">
                     <div class="text2">
                     <p>Streamline your smart home experience with our innovative memory tapes that capture and store your commands. Easily recall preferences and automate routines at the touch of a button.</p>
                     </div>
@@ -34,7 +34,7 @@
                     </div>  
                     <div class="card-container">
                     <div class="card">  
-                    <img src="Smart-House-Images/warm-password-safety.png" alt="password">
+                    <img src="Smart-Home/Smart-House-Images/warm-password-safety-1.2k.jpg" alt="password">
                     <div class="text2">
                     <p>Experience peace of mind with advanced safety features, including password protection and voice recognition. Easily control access for family and friends while keeping intruders out.</p>
                     </div>
@@ -42,7 +42,7 @@
                     </div>  
                     <div class="card-container">
                     <div class="card">  
-                    <img src="Smart-House-Images/warm-auto-shudders.png" alt="Shudders">
+                    <img src="Smart-Home/Smart-House-Images/warm-auto-shudders-1.2k.jpg" alt="Shudders">
                     <div class="text2">
                     <p>Experience effortless control over light and privacy, along with energy efficiency and stylish designs. Say goodbye to manual operation and enhance your lifestyle!</p>
                     </div>
@@ -50,7 +50,7 @@
                     </div>  
                     <div class="card-container">
                     <div class="card">  
-                    <img src="Smart-House-Images/warm-clock.png" alt="clock">
+                    <img src="Smart-Home/Smart-House-Images/warm-clock-1.2k.jpg" alt="clock">
                     <div class="text2">
                     <p>Stay on top of your schedule with a clock that not only tells time but also reminds and talks to you. Enjoy personalized alerts for appointments, tasks, and more, all in a friendly voice.</p>
                     </div>
@@ -58,7 +58,7 @@
                     </div>  
                     <div class="card-container">
                     <div class="card">  
-                    <img src="Smart-House-Images/warm-breakfast-stove.png" alt="stove">
+                    <img src="Smart-Home/Smart-House-Images/warm-breakfast-stove-1.2k.jpg" alt="stove">
                     <div class="text2">
                     <p>Enjoy perfectly cooked meals at the touch of a button. Our automated stove prepares your breakfast while you relax, ensuring delicious results every time. Elevate your mornings!</p>
                     </div>
@@ -66,7 +66,7 @@
                     </div>  
                     <div class="card-container">
                     <div class="card">  
-                    <img src="Smart-House-Images/warm-weather-box.png" alt="weather-box">
+                    <img src="Smart-Home/Smart-House-Images/warm-weather-box-1.2k.jpg" alt="weather-box">
                     <div class="text2">
                     <p>Keep an eye on the elements with our innovative weather box that displays real-time weather updates. Easily track temperature, humidity, and forecasts right from your home.</p>
                     </div>
@@ -74,7 +74,7 @@
                     </div>  
                     <div class="card-container">
                     <div class="card">  
-                    <img src="Smart-House-Images/warm-automated-garage.png" alt="garage">
+                    <img src="Smart-Home/Smart-House-Images/warm-automated-garage-1.2k.jpg" alt="garage">
                     <div class="text2">
                     <p>Enjoy convenient, secure access with a push of a button. Say goodbye to manual operation amd elevate your lifestyle!</p>
                     </div>
@@ -82,7 +82,7 @@
                     </div>  
                     <div class="card-container">
                     <div class="card">  
-                    <img src="Smart-House-Images/warm-patio-table.png" alt="patio-table">
+                    <img src="Smart-Home/Smart-House-Images/warm-patio-table-1.2k.jpg" alt="patio-table">
                     <div class="text2">
                     <p>Transform your patio into an entertainment hub with our automated table that effortlessly brings up games like playing cards at the touch of a button.</p>
                     </div>
@@ -90,7 +90,7 @@
                     </div>                   
                     <div class="card-container">
                     <div class="card">  
-                    <img src="Smart-House-Images/warm-bed-warmers.png" alt="bed">
+                    <img src="Smart-Home/Smart-House-Images/warm-bed-warmers-1.2k.jpg" alt="bed">
                     <div class="text2">
                     <p>Enjoy cozy nights with the touch of a button, adjusting your bed’s temperature for ultimate comfort. Say goodbye to cold sheets and elevate your sleep experience!</p>
                     </div>
@@ -98,7 +98,7 @@
                     </div>
                     <div class="card-container">
                     <div class="card">  
-                    <img src="Smart-House-Images/warm-bathtub.png" alt="bathtub">
+                    <img src="Smart-Home/Smart-House-Images/warm-bathtub-1.2k.jpg" alt="bathtub">
                     <div class="text2">
                     <p>Enjoy luxury at the touch of a button with customization temperature, water levels, and spa-like jets. Elevate your routine!</p>
                     </div>
@@ -106,7 +106,7 @@
                     </div>
                     <div class="card-container">
                     <div class="card">  
-                    <img src="Smart-House-Images/warm-garden-sprinklers.png" alt="garden-sprinklers">
+                    <img src="Smart-Home/Smart-House-Images/warm-garden-sprinklers-1.2k.jpg" alt="garden-sprinklers">
                     <div class="text2">
                     <p>Keep your plants healthy and thriving with our automated garden sprinklers. Set schedules and adjust settings effortlessly for optimal watering, ensuring your garden receives the right amount of hydration.</p>
                     </div>
@@ -114,7 +114,7 @@
                     </div>
                     <div class="card-container">
                     <div class="card">  
-                    <img src="Smart-House-Images/warm-dishwasher.png" alt="dishwasher">
+                    <img src="Smart-Home/Smart-House-Images/warm-dishwasher-1.2k.jpg" alt="dishwasher">
                     <div class="text2">
                     <p>Experience effortless clean-up with our automated dishwasher that takes the hassle out of washing dishes. Enjoy advanced settings for sparkling results, energy efficiency, and time savings all at the touch of a button.</p>
                     </div>
@@ -122,7 +122,7 @@
                     </div>
                     <div class="card-container">
                     <div class="card">  
-                    <img src="Smart-House-Images/warm-cleaning-mouse.png" alt="cleaning-mouse">
+                    <img src="Smart-Home/Smart-House-Images/warm-cleaning-mouse-1.2k.jpg" alt="cleaning-mouse">
                     <div class="text2">
                     <p>Effortlessly keep your home tidy with this cute and efficient robot mouse. It scurries around, picking up dust and crumbs, so you can enjoy a cleaner space without lifting a finger. Simplify your cleaning routine!</p>
                     </div>
@@ -130,7 +130,7 @@
                     </div>
                     <div class="card-container">
                     <div class="card">  
-                    <img src="Smart-House-Images/warm-incinerator.png" alt="incinerator">
+                    <img src="Smart-Home/Smart-House-Images/warm-incinerator-1.2k.jpg" alt="incinerator">
                     <div class="text2">
                     <p>Simplify your cleanup with our automated incinerator that efficiently disposes of organic waste. With smart technology for safe operation, it transforms scraps into ash, reducing clutter and odors.</p>
                     </div>
@@ -138,7 +138,7 @@
                     </div>
                     <div class="card-container">
                     <div class="card">  
-                    <img src="Smart-House-Images/warm-copper-scrap-rat.png" alt="copper-rat">
+                    <img src="Smart-Home/Smart-House-Images/warm-copper-scrap-rat-1.2k.jpg" alt="copper-rat">
                     <div class="text2">
                     <p>Say goodbye to food scraps cluttering your space! This clever robot rat scurries around, collecting leftovers and transporting them to the incinerator.</p>
                     </div>
@@ -146,7 +146,7 @@
                     </div>
                     <div class="card-container">
                     <div class="card">  
-                    <img src="Smart-House-Images/warm-fire-alarm.png" alt="fire-alarm">
+                    <img src="Smart-Home/Smart-House-Images/warm-fire-alarm-1.2k.jpg" alt="fire-alarm">
                     <div class="text2">
                     <p>Ensure your safety with a fire detector that not only alerts you to smoke and heat but also connects to your smart home system.
                     Receive instant notifications and enjoy peace of mind knowing you’re protected.</p>
@@ -155,7 +155,7 @@
                     </div>
                     <div class="card-container">
                     <div class="card">  
-                    <img src="Smart-House-Images/warm-celling-sprinklers.png" alt="celling sprinklers">
+                    <img src="Smart-Home/Smart-House-Images/warm-celling-sprinklers-1.2k.jpg" alt="celling sprinklers">
                     <div class="text2">
                     <p>Ensure safety with our advanced automated ceiling sprinklers that activate at the first sign of fire.
                     Designed for quick response and efficient coverage, they help safeguard your home and loved ones.</p>
